event listener/ adjusting

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    
-    <form id="quiz">
+    <button id="start">Start</button>
+    <div id="quiz">
       <p>What javascript function converts data into string data?</p>
         <input type="radio" name="JSON.stringify" name="question" value="a">
         <label for="JSON.stringify">JSON.stringify</label><br>
@@ -26,7 +26,7 @@
         <input type="radio" id="fixed-size collection of elements of the same data type" name="question" value="c">
         <label for="fixed-size collection of elements of the same data type">fixed-size collection of elements of the same data type</label><br><br>
         <input type="submit" value="Submit">
-    </form>
+    </div>
     
 
 
